# dashi

./: .cursorignore  .dockerignore  .editorconfig  .env.example  .gitignore  AI_CHAT_SUMMARY.md  CHANGELOG.md  DELIVERY.md  DEPLOYMENT.md  Ideation.md  LICENSE  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SETUP_STATUS.md  STRUCTURE.md  docker-compose.yml  push.sh  项目初始化完成.md
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  config.example.env  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  deps.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  bazi.py  billing.py  chat.py  share.py  user.py
backend/app/core/: __init__.py  config.py  database.py  prompts.py  redis.py  security.py
backend/app/models/: __init__.py  bazi_profile.py  billing.py  chat.py  conversation.py  message.py  order.py  user.py
backend/app/prompts/: __init__.py  system_prompts.py
backend/app/schemas/: __init__.py  auth.py  bazi.py  billing.py  chat.py  common.py  user.py
backend/app/services/: __init__.py  ai.py  bazi_service.py  billing.py  langchain_service.py  wechat.py  wechat_service.py
backend/app/utils/: __init__.py
backend/bazi/: bazi_tool.py  query_longitude.py  region.json  requirements.txt
backend/scripts/: dev.sh  init_db.py
backend/static/: API_TEST.md  README.md  SSE_FIX.md
docs/: ARCHITECTURE.md  README.md  SETUP.md  ai-chat-architecture.md  deploy.md  design.md  development.md
frontend/: .env.development  .env.production  DESIGN_GUIDE.md  package.json  (+2 more)
(+76 files in other folders)
